# AMLynx

./: .env.example  README.md  docker-compose.yml  pyproject.toml  rules.yaml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_init.py  0002_alerts_and_models.py  0003_constraints_and_gin.py  0004_time_partitioning.py  0005_rules_history.py  0006_mv_account_daily.py
app/: config.py  main.py  schemas.py
app/models/: anomaly.py
github/workflow/: sci.yml
scripts/: seed_data.py
src/alerts/: prioritizer.py
src/aml/: anomaly.py  ensemble_aggregator.py
src/anomaly/: autoencoder_detector.py  detector.py  graph_detector.py
src/api/: app.py
src/api/gateway/: app.py
src/api/rules_engine/: main.py
src/api/transactions/: main.py
src/common/: config.py  logging.py
src/data/: etl.py  etl_batch.py
src/db/: models.py  session.py
src/features/: enricher.py  store.py
src/models/: persistence.py
src/pipeline/: scoring.py
src/rules_engine/: dsl.py  engine.py
src/schemas/: transaction.py
src/scoring/: hybrid.py
tests/: test_pipeline.py  test_rules.py
