[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
sqlalchemy = "^2.0.25"
alembic = "^1.13.1"
psycopg2-binary = "^2.9"
pydantic = "^2.6"
pandas = "^2.2"
numpy = "^1.26"
scikit-learn = "^1.5.0"
torch = "^2.2.0"
jinja2 = "^3.1.4"
plotly = "^5.22.0"
python-dotenv = "^1.0"
loguru = "^0.7.0"
pyyaml = "^6.0.1"
