[project]
name = "amlynx"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "psycopg[binary]>=3.2",
  "pandas>=2.2",
  "numpy>=1.26",
  "scikit-learn>=1.5",
  "pyyaml>=6.0",
  "joblib>=1.4",
  "python-dateutil>=2.9",
  "loguru>=0.7",
]
