[tool.poetry]
name = "amlynx"
version = "0.1.0"
description = "A deep learning-powered anti-money laundering engine"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.0"
uvicorn = "^0.23.2"
sqlalchemy = "^2.0.22"
pydantic = {extras = ["email"], version = "^2.4.2"}
# ... other dependencies

[tool.poetry.dev-dependencies]
pytest = "^7.4.2"
flake8 = "^6.1.0"
# ... other dev dependencies

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
